2284 [AVS Script Creator] always show the correct output resolution when not resizing
2283 [OneClick] added option to extract core from HD audio tracks
2282 [OneClick] remove phantom audio/subtitle tracks detected by MediaInfo when processing Blu-ray
2281 [QAAC] disable TVBR in HE-AAC. Bug #699
2280 [AVS Script Creator] fixed not applying Nvidia deinterlacer settings
2279 [OneClick] remux only into MKV if necessary & possible. Bug #698
2278 [OneClick] added option to reset the working/output directories in the profile
2277 [OneClick] mux AVI/MP4 input files into MKV for better audio/video processing support
2276 [QAAC] if CoreAudioToolbox.dll is missing an information will be displayed
2275 [Worker] fixed temporary worker only processing one job
2274 [Adaptive Muxer] fixed handling of the "and close" button
2273 [Audio Encoding Window] cosmetics
2272 [AVS Script Creator] moved "acceptable aspect error" setting into the AviSynth profile (1% by default)
     [AVS Script Creator] improved AR chooser
     [MediaInfo] improved aspect ratio detection
2269 [MP4 Muxer] restrict "group=1" to the Apple Devices regarding Audio streams
2268 [AVS Script Creator] use very high accuracy for anamorphic encodings if acceptable aspect error is set to 0%
2267 [AVS Script Creator] improved accuracy of the "Aspect Ratio Error"
     [AVS Script Creator] improved accuracy of the aspect ratio when using "Clever (TM) anamorphic encoding"
     [AVS Script Creator] internal optimizations
     [OneClick] implemented the AVS Script Creator changes
2266 [Audio Encoder] added BassAudioSource() as decoder. Part II
2265 [MP4 Muxer] improved iOS compatibility when using multiple audio/subtitle tracks. Patch #65 by Eli Bildirici
2264 [Worker] a temporary worker will always be deleted after a job is finished (successful or not)
2263 [Audio] changed default value of the normalization to disabled
2262 [AVS Script Creator] show "Aspect Ratio Error" when doing an anamorphic encoding