@@ -1,5 +1,6 @@
+2285 [OneClick] added option to use only the first audio track from a specific language
 2284 [AVS Script Creator] always show the correct output resolution when not resizing
-2283 [OneClick] added option to extract core from HD audio tracks
+2283 [OneClick] added option to extract the core from HD audio tracks
 2282 [OneClick] remove phantom audio/subtitle tracks detected by MediaInfo when processing Blu-ray
 2281 [QAAC] disable TVBR in HE-AAC. Bug #699
 2280 [AVS Script Creator] fixed not applying Nvidia deinterlacer settings
